# ProjectManagerCLI

./: .gitignore  README.md  install.ps1  install.sh  pmcli.py  pyproject.toml  setup.bat  setup.py  uninstall.ps1
PM_CLI.egg-info/: PKG-INFO  SOURCES.txt
extensions/ai-gen/: main.py
plugins/: registry.json
pm_cli.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pmcli/: __main__.py  cli.py
pmcli/commands/: add_task.py  done.py  init.py  open.py  plugin.py
pmcli/core/: models.py  registry.py
pmcli/output/: __init__.py
pmcli/plugins/: __init__.py  loader.py
pmcli/storage/: __init__.py
projectmcli.egg-info/: SOURCES.txt
site_web/: index.html  script.js  style.css
tests/: test_security_hypothesis.py
